--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-[[build]]
+[build]
 functions = "/functions"
 command = "npm run"
 
@@ -21,3 +21,7 @@ to = "/.netlify/functions/account-page"
 [[redirects]]
 from = "/suggestions-page"
 to = "/.netlify/functions/suggestions-page"
+
+[[redirects]]
+from = "/signup"
+to = "/.netlify/functions/signup"
